--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/text_view"
@@ -13,86 +15,83 @@
         android:text="QUANTITY"
         android:textSize="18dp"
         android:layout_margin="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/quantity_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:text="0"
-        android:layout_marginLeft="8dp"
-        android:textColor="@color/black"
-        android:layout_below="@id/plus"
         />
 
-    <Button
-        android:id="@+id/button"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ORDER"
-        android:layout_marginLeft="8dp"
-        android:textSize="18dp"
-        android:textColor="@color/black"
-        android:backgroundTint="@color/teal_200"
-        android:layout_below="@id/price_text_view"
-        android:onClick="submitOrder"
-        android:layout_marginTop="16dp"/>
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/minus"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:backgroundTint="@color/teal_200"
+            android:insetTop="0dp"
+            android:layout_margin="8dp"
+            android:insetBottom="0dp"
+            android:onClick="decrement"
+            android:text="-"
+            android:textColor="@color/black"
+            android:textSize="18dp" />
+
+
+        <TextView
+            android:id="@+id/quantity_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2"
+            android:layout_margin="8dp"
+            android:textColor="@color/black"
+            android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/plus"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:backgroundTint="@color/teal_200"
+            android:insetTop="0dp"
+            android:layout_margin="8dp"
+            android:insetBottom="0dp"
+            android:onClick="increment"
+            android:text="+"
+            android:textColor="@color/black"
+            android:textSize="18dp" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/priceName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:text="PRICE"
+        android:layout_below="@id/minus"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
-        android:layout_below="@id/minus"
-        />
+        android:text="PRICE"
+        android:textSize="18dp" />
 
     <TextView
         android:id="@+id/price_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:text="$0"
-        android:textColor="@color/black"
+        android:layout_below="@id/priceName"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
-        android:layout_below="@id/priceName"
-        />
-
-    <Button
-        android:id="@+id/plus"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_below="@id/text_view"
-        android:layout_marginLeft="8dp"
-        android:backgroundTint="@color/teal_200"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:textSize="18dp"
-        android:text="+"
-        android:onClick="increment"
-        android:textColor="@color/black" />
-
-    <Button
-        android:id="@+id/minus"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:text="-"
-        android:layout_marginLeft="8dp"
-        android:backgroundTint="@color/teal_200"
+        android:text="$0"
         android:textColor="@color/black"
-        android:textSize="18dp"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:onClick="decrement"
-        android:layout_below="@id/quantity_text_view"
-        />
+        android:textSize="18dp" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/price_text_view"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/teal_200"
+        android:onClick="submitOrder"
+        android:text="ORDER"
+        android:textColor="@color/black"
+        android:textSize="18dp" />
 
-</RelativeLayout>
+</LinearLayout>
